argocd/install/grpcroute-argocd-grpc.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpc
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway # Using central gateway in "gateway" namespace
      name: core
      sectionName: https
  hostnames:
    - argocd-grpc.nodes.ee
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
          weight: 1
          kind: Service
          group: ""
