argocd/install/httproute-argocd-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-redirect
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway # Using central gateway in "gateway" namespace
      name: core
      sectionName: http
  hostnames:
    - argocd.nodes.ee
  rules:
    - filters:
        - requestRedirect:
            port: 443
            scheme: https
            statusCode: 301
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
