argocd/install/httproute-argocd.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway # Using central gateway in "gateway" namespace
      name: core
      sectionName: https
  hostnames:
    - argocd.nodes.ee
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
          weight: 1
          kind: Service
          group: ""
      matches:
        - path:
            type: PathPrefix
            value: /
